[gd_scene load_steps=2 format=3 uid="uid://dsfryali1c8pe"]

[ext_resource type="Script" uid="uid://q75017nst1s4" path="res://scenes/test/battle_simulation_test.gd" id="1_yvnbx"]

[node name="BattleSimulationTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvnbx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "战斗模拟测试场景"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 320.0
offset_bottom = 580.0

[node name="ChessList" type="ScrollContainer" parent="LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LeftPanel/ChessList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChessListTitle" type="Label" parent="LeftPanel/ChessList/VBoxContainer"]
layout_mode = 2
text = "棋子列表"
horizontal_alignment = 1

[node name="CenterPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 80.0
offset_right = 940.0
offset_bottom = 580.0

[node name="BoardContainer" type="Control" parent="CenterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RightPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 80.0
offset_right = 1260.0
offset_bottom = 580.0

[node name="InfoPanel" type="VBoxContainer" parent="RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="BottomPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="StatusLabel" type="Label" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -13.0
offset_right = 400.0
offset_bottom = 13.0
grow_vertical = 2
text = "状态: 设置阶段 - 请放置棋子"
vertical_alignment = 1

[node name="ControlPanel" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
alignment = 2

[node name="SpeedLabel" type="Label" parent="BottomPanel/ControlPanel"]
layout_mode = 2
text = "速度:"
vertical_alignment = 1

[node name="SpeedSlider" type="HSlider" parent="BottomPanel/ControlPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 0.5
max_value = 3.0
step = 0.1
value = 1.0

[node name="StartBattleButton" type="Button" parent="BottomPanel/ControlPanel"]
layout_mode = 2
text = "开始战斗"

[node name="ResetButton" type="Button" parent="BottomPanel/ControlPanel"]
layout_mode = 2
text = "重置"

[node name="BackButton" type="Button" parent="BottomPanel/ControlPanel"]
layout_mode = 2
text = "返回"
